ELS Code/main/default/objects/Property__c/fields/Acquisition_Year__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Year__c</fullName>
    <label>Acquisition Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>