ELS Code/main/default/objects/Property__c/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <label>Core</label>
    <length>255</length>
    <type>Text</type>
</CustomField>