ELS Code/main/default/objects/Property__c/fields/Fr_code__c.field-meta.xml
<CustomField>
    <fullName>Fr_code__c</fullName>
    <label>Fr_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>