ELS Code/main/default/objects/Property__c/fields/Get_Directions_to_Property_RVOTG__c.field-meta.xml
<CustomField>
    <fullName>Get_Directions_to_Property_RVOTG__c</fullName>
    <label>Get Directions to Property RVOTG</label>
    <type>Url</type>
</CustomField>