ELS Code/main/default/objects/Property__c/fields/Is_Community__c.field-meta.xml
<CustomField>
    <fullName>Is_Community__c</fullName>
    <label>Is Community</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North Disc Ops</fullName>
            </value>
            <value>
                <fullName>South MH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>