ELS Code/main/default/objects/Property__c/fields/Opted_In_SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>Opted_In_SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opted In SMS Template</label>
    <referenceTo>simplesms__SMS_Template__c</referenceTo>
    <relationshipLabel>Properties (Opted In SMS Template)</relationshipLabel>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>