ELS Code/main/default/objects/Property__c/fields/Policy_RVOTG__c.field-meta.xml
<CustomField>
    <fullName>Policy_RVOTG__c</fullName>
    <label>Policy RVOTG</label>
    <type>Url</type>
</CustomField>