ELS Code/main/default/objects/Property__c/fields/Policy_TT__c.field-meta.xml
<CustomField>
    <fullName>Policy_TT__c</fullName>
    <label>Policy TT</label>
    <type>Url</type>
</CustomField>