ELS Code/main/default/objects/Property__c/fields/Property_Events_RVOTG__c.field-meta.xml
<CustomField>
    <fullName>Property_Events_RVOTG__c</fullName>
    <label>Property Events RVOTG</label>
    <type>Url</type>
</CustomField>