ELS Code/main/default/objects/Property__c/fields/Property_Events_TT__c.field-meta.xml
<CustomField>
    <fullName>Property_Events_TT__c</fullName>
    <label>Property Events TT</label>
    <type>Url</type>
</CustomField>