ELS Code/main/default/objects/Property__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <externalId>true</externalId>
    <label>Property ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>