ELS Code/main/default/objects/Property__c/fields/Property_Website_RVOTG__c.field-meta.xml
<CustomField>
    <fullName>Property_Website_RVOTG__c</fullName>
    <label>Property Website RVOTG</label>
    <type>Url</type>
</CustomField>