ELS Code/main/default/objects/Property__c/fields/Property_Website_TT__c.field-meta.xml
<CustomField>
    <fullName>Property_Website_TT__c</fullName>
    <label>Property Website TT</label>
    <type>Url</type>
</CustomField>