ELS Code/main/default/objects/Property__c/fields/Resort_Map_RVOTG__c.field-meta.xml
<CustomField>
    <fullName>Resort_Map_RVOTG__c</fullName>
    <label>Resort Map RVOTG</label>
    <type>Url</type>
</CustomField>