ELS Code/main/default/objects/Property__c/fields/Resort_Map_TT__c.field-meta.xml
<CustomField>
    <fullName>Resort_Map_TT__c</fullName>
    <label>Resort Map TT</label>
    <type>Url</type>
</CustomField>