ELS Code/main/default/objects/Property__c/fields/Robot_ID__c.field-meta.xml
<CustomField>
    <fullName>Robot_ID__c</fullName>
    <externalId>true</externalId>
    <label>Robot ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>