ELS Code/main/default/objects/Property__c/fields/Send_Text_Messages__c.field-meta.xml
<CustomField>
    <fullName>Send_Text_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Text Messages</label>
    <type>Checkbox</type>
</CustomField>