ELS Code/main/default/objects/Property__c/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS Template</label>
    <referenceTo>simplesms__SMS_Template__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>