ELS Code/main/default/objects/Property__c/fields/Win_Back_Button__c.field-meta.xml
<CustomField>
    <fullName>Win_Back_Button__c</fullName>
    <description>Win back automation from Acoustic.</description>
    <inlineHelpText>Win back automation from Acoustic.</inlineHelpText>
    <label>Win Back Button</label>
    <length>1250</length>
    <type>LongTextArea</type>
</CustomField>